gateway-api/examples/simple/Gateway.yaml
# The Gateway listens for HTTP traffic on port 80. This particular GatewayClass automatically assigns an IP address
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: productpage-gw
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
